@@ -142,6 +142,8 @@ Similarity
 +===================================================================================+==========================================================================+
 | `Correlation <http://simplestatistics.readthedocs.io/en/latest/#correlation>`__   | ``correlate([2, 1, 0, -1, -2, -3, -4, -5], [0, 1, 1, 2, 3, 2, 4, 5])``   |
 +-----------------------------------------------------------------------------------+--------------------------------------------------------------------------+
+| `Covariance <http://simplestatistics.readthedocs.io/en/latest/#covariance>`__     | ``covariance([1,2,3,4,5,6], [6,5,4,3,2,1])``                             |
++-----------------------------------------------------------------------------------+--------------------------------------------------------------------------+
 
 Distributions
 ^^^^^^^^^^^^^
