@@ -1,6 +1,13 @@
 History
 -------
 
+0.x.x (TBD)
+-----------
+
+Added
+
+* ``covariance()``
+
 0.3.0 (2016-12-03)
 -----------
 
